--- a/css/style.css
+++ b/css/style.css
@@ -573,8 +573,9 @@ h3 {
     /* skill end */
     /* footer */
     .copy h5 {
-        font-size: 16px;
+        font-size: 14px;
         padding: 5px 0;
+        letter-spacing: 0px;
     }
     .social {
         word-spacing: 5px;
@@ -657,7 +658,7 @@ h3 {
     }
     /* gallery end */
     /* footer */
-    .copy h4 {
+    .copy h5 {
         font-size: 16px;
         padding: 5px 0;
     }
@@ -742,7 +743,7 @@ h3 {
     }
     /* gallery end */
     /* footer */
-    .copy h4 {
+    .copy h5 {
         font-size: 16px;
         padding: 5px 0;
     }
