--- a/css/style.css
+++ b/css/style.css
@@ -576,6 +576,7 @@ h3 {
         font-size: 14px;
         padding: 5px 0;
         letter-spacing: 0px;
+        word-spacing: 0px;
     }
     .social {
         word-spacing: 5px;
