--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,14 @@
     scroll-behavior: smooth;
 }
 
+#preload {
+    width: 100%;
+    height: 100vh;
+    background: #fff url("https://cdn.dribbble.com/users/1958046/screenshots/4891917/loading.gif") no-repeat center;
+    z-index: 2;
+    scroll-behavior: none;
+}
+
  :root {
     --bgcolor: #fff;
     --fcolor: #000;
@@ -125,7 +133,7 @@ nav h1 {
     width: 25%;
     color: var(--fcolor);
     letter-spacing: 3px;
-    text-shadow: 0 2px 4px black;
+    text-shadow: 0 2px 4px #fff;
     font-family: 'Lobster', cursive;
 }
 
@@ -230,7 +238,7 @@ nav .btn-toggle {
 /* horigontal line */
 
 .hr-line {
-    margin: 0 auto;
+    margin: 20px auto;
     width: 250px;
     height: 2px;
     box-shadow: 0 0 3px #000;
@@ -319,26 +327,6 @@ h3 {
     text-shadow: 0 2px 4px #000;
 }
 
-@media (max-width: 468px) {
-    h3,
-    h4,
-    p {
-        width: 100%;
-        text-align: center;
-        color: var(--fcolor);
-        letter-spacing: 1px;
-    }
-    h3,
-    h4 {
-        margin-top: 20px;
-        margin-bottom: 0;
-        color: var(--fcolor);
-        text-shadow: 0 2px 4px #000;
-        letter-spacing: 2px;
-        white-space: nowrap;
-    }
-}
-
 
 /* -----------------------skills--------------------------- */
 
@@ -412,8 +400,8 @@ h3 {
 
 .gallery {
     width: 100%;
-    height: 70%;
     position: absolute;
+    padding: 10px 0;
     top: 0;
     left: 0;
     width: 100%;
@@ -443,7 +431,7 @@ h3 {
     height: 600px;
     border-radius: 10px;
     box-shadow: 0 0 5px #000;
-    margin-top: 30px;
+    margin-top: 10px;
 }
 
 .on {
@@ -459,7 +447,15 @@ h3 {
 .footer {
     width: 100%;
     background-color: #252424;
-    padding-top: 10px;
+    padding: 10px;
+}
+
+.email {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .copy h5 {
@@ -475,15 +471,32 @@ h3 {
     width: 100%;
     text-align: center;
     word-spacing: 10px;
-    margin: 20px 0;
+    margin: 10px 0;
     color: #fff;
     font-size: 26px;
     text-shadow: 0 2px 4px #000;
-    ;
 }
 
-.btn {
-    padding: 10px 15px;
+.email h3,
+.f-design {
+    margin-top: 0;
+    color: #fff;
+}
+
+.social h3 {
+    margin-bottom: 10px;
+}
+
+.social .link {
+    color: #fff;
+}
+
+.btn-a {
+    text-decoration: none;
+    width: 160px;
+    height: 50px;
+    font-size: 16px;
+    padding: 10px;
     border-radius: 10px;
     margin: 10px 0;
     border: 2px solid #c5c353;
@@ -492,13 +505,16 @@ h3 {
     color: #fff;
     text-shadow: 0 2px 4px black;
     transition: all 0.5s linear;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.btn:focus {
+.btn-a:focus {
     outline: none;
 }
 
-.btn:hover {
+.btn-a:hover {
     background-color: #fcfcfc5e;
     box-shadow: 0 0 10px #00000081;
 }
@@ -534,6 +550,19 @@ h3 {
         display: block;
     }
     /* navbar end */
+    h3,
+    h4,
+    p {
+        letter-spacing: 1px;
+    }
+    h3,
+    h4 {
+        margin-top: 20px;
+        margin-bottom: 0;
+        text-shadow: 0 2px 4px #000;
+        letter-spacing: 2px;
+        white-space: nowrap;
+    }
     /* about */
     .about {
         flex-direction: column;
@@ -560,8 +589,8 @@ h3 {
     .img-3 img,
     .img-4 img,
     .img-5 img {
-        width: 80%;
-        height: 60%;
+        width: 90%;
+        height: 70%;
         border-radius: 10px;
         box-shadow: 0 0 5px #000;
     }
@@ -575,7 +604,7 @@ h3 {
     .copy h5 {
         font-size: 14px;
         padding: 5px 0;
-        letter-spacing: 0px;
+        letter-spacing: 1px;
         word-spacing: 0px;
     }
     .social {
@@ -587,7 +616,7 @@ h3 {
         font-size: 16px;
         letter-spacing: 1px;
     }
-    .btn {
+    .btn-a {
         padding: 5px 15px;
         border-radius: 10px;
     }
@@ -621,6 +650,19 @@ h3 {
         display: block;
     }
     /* navbar end */
+    h3,
+    h4,
+    p {
+        letter-spacing: 1px;
+    }
+    h3,
+    h4 {
+        margin-top: 20px;
+        margin-bottom: 0;
+        text-shadow: 0 2px 4px #000;
+        letter-spacing: 2px;
+        white-space: nowrap;
+    }
     /* about */
     .about {
         flex-direction: column;
@@ -652,8 +694,8 @@ h3 {
     .img-3 img,
     .img-4 img,
     .img-5 img {
-        width: 80%;
-        height: 60%;
+        width: 90%;
+        height: 70%;
         border-radius: 10px;
         box-shadow: 0 0 5px #000;
     }
@@ -672,7 +714,7 @@ h3 {
         font-size: 16px;
         letter-spacing: 1px;
     }
-    .btn {
+    .btn-a {
         padding: 5px 15px;
         border-radius: 10px;
     }
@@ -706,6 +748,19 @@ h3 {
         display: block;
     }
     /* navbar end */
+    h3,
+    h4,
+    p {
+        letter-spacing: 1px;
+    }
+    h3,
+    h4 {
+        margin-top: 20px;
+        margin-bottom: 0;
+        text-shadow: 0 2px 4px #000;
+        letter-spacing: 2px;
+        white-space: nowrap;
+    }
     /* about */
     .about {
         flex-direction: column;
@@ -737,8 +792,8 @@ h3 {
     .img-3 img,
     .img-4 img,
     .img-5 img {
-        width: 80%;
-        height: 60%;
+        width: 90%;
+        height: 70%;
         border-radius: 10px;
         box-shadow: 0 0 5px #000;
     }
@@ -757,7 +812,7 @@ h3 {
         font-size: 16px;
         letter-spacing: 1px;
     }
-    .btn {
+    .btn-a {
         padding: 5px 15px;
         border-radius: 10px;
     }
