--- a/css/style.css
+++ b/css/style.css
@@ -7,14 +7,6 @@
     scroll-behavior: smooth;
 }
 
-#preload {
-    width: 100%;
-    height: 100vh;
-    background: #fff url("https://cdn.dribbble.com/users/1958046/screenshots/4891917/loading.gif") no-repeat center;
-    z-index: 2;
-    scroll-behavior: none;
-}
-
  :root {
     --bgcolor: #fff;
     --fcolor: #000;
@@ -133,7 +125,7 @@ nav h1 {
     width: 25%;
     color: var(--fcolor);
     letter-spacing: 3px;
-    text-shadow: 0 2px 4px #fff;
+    text-shadow: 0 2px 4px #f8e807;
     font-family: 'Lobster', cursive;
 }
 
@@ -160,7 +152,7 @@ section a {
 
 section a:hover {
     text-shadow: 0 2px 4px black;
-    color: #fd2306;
+    color: #fded06;
 }
 
 nav .btn-toggle {
@@ -190,7 +182,7 @@ nav .btn-toggle {
     height: 4px;
     background: #fff;
     border-radius: 5px;
-    box-shadow: 0 4px 5px rgba(255, 101, 47, 0.2);
+    box-shadow: 0 4px 5px rgba(248, 244, 9, 0.356);
     transition: all 0.5s ease-in-out;
 }
 
@@ -280,11 +272,6 @@ nav .btn-toggle {
     height: 200px;
     border-radius: 50%;
     transition: all 0.5s ease-in-out;
-}
-
-.profile:hover {
-    border-radius: 0;
-    box-shadow: 0 0 5px #00000081;
 }
 
 h2,
@@ -518,6 +505,7 @@ h3 {
 .btn-a:hover {
     background-color: #fcfcfc5e;
     box-shadow: 0 0 10px #00000081;
+    color: #000;
 }
 
 
